[package]
name = "lab-assistant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
anchor-client = "0.29"
anchor-lang = "0.29"
# borsh = { version = "1.0.0-alpha.2", features = ["derive"] }
bytemuck = { version = "1.14", features = ["derive"] }
# serde = { version = "1.0", features = ["derive"] }
# solana-account-decoder = "1.17"
solana-program = "1.17"